--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ Desktop: 1440px */
 * {
   margin: 0;
   padding: 0;
-  font-family: "Barlow", sans-serif;
 }
 
 :root {
@@ -24,9 +23,171 @@ Desktop: 1440px */
   --white: hsl(0, 0%, 100%);
 }
 
+/* .container {
+  padding: 24px;
+} */
+
+/* .hamburger {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar {
+  width: 24px;
+  height: 2px;
+  background-color: var(--white);
+  margin: 0px 0px 6px;
+}
+
+.no-space {
+  margin: 0;
+}
+
+.clicked .bar {
+  opacity: 0.5;
+} */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 24px;
+}
+
+.navbar #logo {
+  height: 24px;
+}
+
+#hamburger {
+  height: 18px;
+  width: 24px;
+  cursor: pointer;
+}
+
+#hamburger:hover {
+  opacity: 0.5;
+}
+
+.mobile-navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hide {
+  display: none;
+}
+
+#tab {
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: -25px;
+  right: 0;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+  border-right: 25px solid #fff;
+}
+
+.dropmenu {
+  display: flex;
+  flex-flow: column;
+  position: absolute;
+  padding: 0 0 40px;
+  justify-content: center;
+  margin-top: 50px;
+  width: 325px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
+  animation: slide-down 0.3s;
+}
+
+.dropmenu a {
+  text-decoration: none;
+  color: hsl(232, 10%, 55%);
+}
+
+.dropmenu ul {
+  padding: 0;
+  overflow: hidden;
+}
+
+.dropmenu ul li {
+  list-style-type: none;
+  padding: 18px 0;
+  font-family: "Barlow", sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+
+#contact {
+  justify-content: center;
+  text-align: center;
+  margin: 20px 0;
+  color: hsl(212, 27%, 19%);
+  font-size: 16px;
+}
+
+#contact span {
+  background-color: hsl(51, 100%, 49%);
+  font-family: "Fraunces", serif;
+  text-transform: uppercase;
+  padding: 20px 30px;
+  margin-top: 100px;
+  border-radius: 50px;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero h1 {
+  font-family: "Fraunces", serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 40px;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--white);
+  letter-spacing: 6.25px;
+  padding-top: 5.5rem;
+}
+
+.hero img {
+  padding-top: 52px;
+  width: 2rem;
+}
+
+.img-hero {
+  width: 100vw;
+}
+
+.overlay-content {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.content {
+  padding: 32px 24px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
+  font-family: "Barlow", sans-serif;
 }
 
 .attribution a {
