--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,9 @@ font-family: 'Fraunces', serif; */
 
 :root {
   --soft-red: hsl(7, 99%, 70%);
+  --soft-red-a: hsla(7, 99%, 70%, 0.5);
   --yellow: hsl(51, 100%, 49%);
+  --yellow-a: hsla(51, 100%, 49%, 0.5);
   --dark-saturated-cyan: hsl(167, 40%, 24%);
   --dark-blue: hsl(198, 62%, 26%);
   --dark-moderate-cyan: hsl(168, 34%, 41%);
@@ -18,6 +20,9 @@ font-family: 'Fraunces', serif; */
   --dark-grayish-blue: hsl(232, 10%, 55%);
   --grayish-blue: hsl(210, 4%, 67%);
   --white: hsl(0, 0%, 100%);
+  --medium-turquoise: hsl(199, 100%, 62%);
+  --text-title: hsl(211, 26%, 19%);
+  --text-sub: hsl(233, 10%, 55%);
 }
 
 .attribution {
@@ -33,9 +38,10 @@ font-family: 'Fraunces', serif; */
 .container-header {
   background-image: url(../images/mobile/image-header.jpg);
   background-repeat: no-repeat;
-  background-size: contain;
-  height: 100vh;
-  padding: 32px 24px;
+  background-size: cover;
+  height: 75vh;
+  /* height: 100vh; */
+  padding: 0px 24px 32px;
 }
 
 .navbar {
@@ -44,7 +50,9 @@ font-family: 'Fraunces', serif; */
   align-items: center;
   position: -webkit-sticky;
   position: sticky;
-  top: 32px;
+  top: 0px;
+  padding: 24px;
+  background-color: var(--medium-turquoise);
 }
 
 .navbar #logo {
@@ -79,9 +87,83 @@ font-family: 'Fraunces', serif; */
   width: 2rem;
 }
 
+.container-branding {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.container-branding img {
+  width: 100vw;
+}
+
+.content-branding {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--white);
+  padding: 64px 24px;
+}
+
+.content-branding h2 {
+  font-family: "Fraunces", serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 39px;
+  text-align: center;
+  letter-spacing: -0.228571px;
+  color: var(--text-title);
+  padding-bottom: 24px;
+}
+
+.content-branding p {
+  font-family: "Barlow", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: -0.128571px;
+  color: var(--text-sub);
+  padding-bottom: 32px;
+}
+
+.content-branding a {
+  font-family: "Fraunces", serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: var(--text-title);
+  text-decoration-thickness: 10px;
+}
+
+.content-branding .link-1 {
+  text-decoration-color: var(--yellow-a);
+}
+
+.content-branding .link-2 {
+  text-decoration-color: var(--soft-red-a);
+}
+
+.content-branding .link-1:hover {
+  text-decoration-color: var(--yellow);
+}
+
+.content-branding .link-2:hover {
+  text-decoration-color: var(--soft-red);
+}
+
 @media (min-width: 1024px) {
   .container-header {
     background-image: url(../images/desktop/image-header.jpg);
+    height: 100vh;
+    padding: 0px 48px 32px;
+  }
+
+  .navbar {
     padding: 32px 48px;
   }
 
