--- a/css/main.css
+++ b/css/main.css
@@ -29,10 +29,11 @@ font-family: 'Fraunces', serif; */
   font-size: 11px;
   text-align: center;
   font-family: "Barlow", sans-serif;
+  color: hsl(167, 34%, 41%);
 }
 
 .attribution a {
-  color: var(--soft-red);
+  color: var(--dark-saturated-cyan);
 }
 
 .container-header {
@@ -94,6 +95,8 @@ font-family: 'Fraunces', serif; */
 
 .container-branding img {
   width: 100vw;
+  height: 100%;
+  object-fit: cover;
 }
 
 .content-branding {
@@ -154,6 +157,171 @@ font-family: 'Fraunces', serif; */
 
 .content-branding .link-2:hover {
   text-decoration-color: var(--soft-red);
+}
+
+.content-branding-img-1,
+.content-branding-img-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 90vh;
+  padding: 0px 24px 59px;
+  background-image: url(../images/mobile/image-graphic-design.jpg);
+}
+
+.content-branding-img-2 {
+  background-image: url(../images/mobile/image-photography.jpg);
+}
+
+.content-branding-img-1 h2,
+.content-branding-img-2 h2 {
+  font-family: "Fraunces", serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 28px;
+  line-height: 35px;
+  text-align: center;
+  letter-spacing: -0.2px;
+  color: hsl(166, 40%, 24%);
+  padding-bottom: 27px;
+}
+
+.content-branding-img-2 h2 {
+  color: hsl(197, 86%, 12%);
+}
+
+.content-branding-img-1 p,
+.content-branding-img-2 p {
+  font-family: "Barlow", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 27px;
+  text-align: center;
+  letter-spacing: -0.114286px;
+  color: var(--dark-blue);
+}
+
+.container-testimonial {
+  padding: 64px 24px 86px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container-testimonial h3 {
+  font-family: "Fraunces", serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  color: var(--grayish-blue);
+}
+
+.container-testimonial .content-testi {
+  padding-top: 64px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container-testimonial .content-testi img {
+  height: 72px;
+  width: 72px;
+  border-radius: 50%;
+}
+
+.container-testimonial .content-testi .client-testi {
+  font-family: "Barlow", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: -0.128571px;
+  color: var(--very-dark-grayish-blue);
+  padding: 32px 0px;
+}
+
+.container-testimonial .content-testi .client-name {
+  font-family: "Fraunces", serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  letter-spacing: -0.128571px;
+  color: var(--text-title);
+  padding-bottom: 8px;
+}
+
+.container-testimonial .content-testi .client-profession {
+  font-family: "Barlow", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 25px;
+  text-align: center;
+  letter-spacing: -0.1px;
+  color: var(--grayish-blue);
+}
+
+.container-gallery-mobile {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.container-gallery-mobile img {
+  width: 50vw;
+  object-fit: cover;
+}
+
+.footer {
+  padding: 64px 39px 32px;
+  background-color: hsl(168, 44%, 70%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer #logo {
+  height: 33px;
+  color: var(--dark-saturated-cyan);
+}
+
+.footer .links {
+  padding: 40px 0px 88px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.footer .links a {
+  text-decoration: none;
+  font-family: "Barlow", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: -0.128571px;
+  color: hsl(167, 34%, 41%);
+}
+
+.footer .socials {
+  padding-bottom: 72px;
+  width: 60%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.footer .socials a {
+  text-decoration: none;
 }
 
 @media (min-width: 1024px) {
