--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,7 @@ font-family: 'Fraunces', serif; */
 .content-branding-2 {
   display: flex;
   flex-direction: column;
+  flex-flow: row wrap;
   background-color: var(--white);
   padding: 64px 24px;
 }
@@ -215,24 +216,33 @@ font-family: 'Fraunces', serif; */
   letter-spacing: 1px;
   text-transform: uppercase;
   color: var(--text-title);
-  text-decoration-thickness: 10px;
+  text-decoration: none;
+  /* text-decoration-thickness: 10px; */
 }
 
-.content-branding-1 .link,
-.content-branding-2 .link {
-  text-decoration-color: var(--yellow-a);
+.content-branding-1 a::after,
+.content-branding-2 a::after {
+  content: "";
+  height: 8px;
+  margin: -10px -6px 0px;
+  border-radius: 5px;
+  display: block;
 }
 
-.content-branding-2 .link {
-  text-decoration-color: var(--soft-red-a);
+.content-branding-1 a::after {
+  background-color: var(--yellow-a);
 }
 
-.content-branding-1 .link:hover {
-  text-decoration-color: var(--yellow);
+.content-branding-2 a::after {
+  background-color: var(--soft-red-a);
 }
 
-.content-branding-2 .link:hover {
-  text-decoration-color: var(--soft-red);
+.content-branding-1 a:hover::after {
+  background-color: var(--yellow);
+}
+
+.content-branding-2 a:hover::after {
+  background-color: var(--soft-red);
 }
 
 .content-branding-img-1,
